@@ -8,6 +8,7 @@ import org.meveo.model.jobs.JobExecutionResultImpl;
 import org.meveo.model.jobs.JobInstance;
 import org.meveo.model.payments.AccountOperation;
 import org.meveo.model.payments.AccountOperationStatus;
+import org.meveo.model.payments.AccountingScheme;
 import org.meveo.model.payments.OCCTemplate;
 import org.meveo.service.payments.impl.AccountOperationService;
 import org.meveo.service.payments.impl.OCCTemplateService;
@@ -56,62 +57,67 @@ public class AccountingSchemesJobBean extends IteratorBasedJobBean<Long> {
     }
 
     private void executeScript(List<Long> idAOs, JobExecutionResultImpl jobExecutionResult) throws BusinessException {
-        try {
-            List<AccountOperation> accountOperations = accountOperationService.findByIds(idAOs);
+        List<AccountOperation> accountOperations = accountOperationService.findByIds(idAOs);
 
-            Optional.ofNullable(accountOperations).orElse(Collections.emptyList())
-                    .forEach(accountOperation -> {
-                        // Find OOC Template
-                        OCCTemplate occT = occTemplateService.findByCode(accountOperation.getCode());
+        Optional.ofNullable(accountOperations).orElse(Collections.emptyList())
+                .forEach(accountOperation -> {
+                    // Find OOC Template
+                    OCCTemplate occT = occTemplateService.findByCode(accountOperation.getCode());
 
-                        if (occT == null) {
-                            log.warn("No OCCTemplate found for AccountOperation [id={}]...skip AccountingSchemesJob process for this instance", accountOperation.getId());
-                            return;
-                        }
+                    if (occT == null) {
+                        log.warn("No OCCTemplate found for AccountOperation [id={}]...skip AccountingSchemesJob process for this instance", accountOperation.getId());
+                        return;
+                    }
 
-                        if (occT.getAccountingScheme() == null) {
-                            log.warn("Ignored account operation (id={}, type={}, code={}): no scheme set",
-                                    accountOperation.getId(), accountOperation.getType(), accountOperation.getCode());
-                            accountOperationService.updateStatusInNewTransaction(Arrays.asList(accountOperation), AccountOperationStatus.EXPORT_FAILED);
-                            markAsError("No scheme found for OCCTemplate id=" + occT.getId(), jobExecutionResult);
-                        }
+                    if (occT.getAccountingScheme() == null) {
+                        log.warn("Ignored account operation (id={}, type={}, code={}): no scheme set",
+                                accountOperation.getId(), accountOperation.getType(), accountOperation.getCode());
+                        accountOperationService.updateStatusInNewTransaction(List.of(accountOperation), AccountOperationStatus.EXPORT_FAILED);
+                        markAsError("Ignored account operation (id=" + accountOperation.getId() + ", type=" + accountOperation.getType() + ")" +
+                                        ": no scheme set for account operation type (id=" + occT.getId() + ", code=" + occT.getCode() + ")",
+                                jobExecutionResult);
+                    }
 
-                        ScriptInterface script = scriptInstanceService.getScriptInstance(occT.getAccountingScheme().getCode());
+                    ScriptInterface script = findScript(accountOperation, occT.getAccountingScheme(), jobExecutionResult);
 
-                        if (script == null) {
-                            log.warn("No Script linked to AccountingScheme with code={}", occT.getAccountingScheme().getCode());
-                            return;
-                        }
+                    Map<String, Object> methodContext = new HashMap<>();
+                    methodContext.put(Script.CONTEXT_ENTITY, accountOperation);
+                    methodContext.put(Script.CONTEXT_CURRENT_USER, currentUser);
+                    methodContext.put(Script.CONTEXT_APP_PROVIDER, appProvider);
 
-                        Map<String, Object> methodContext = new HashMap<>();
-                        methodContext.put(Script.CONTEXT_ENTITY, accountOperation);
-                        methodContext.put(Script.CONTEXT_CURRENT_USER, currentUser);
-                        methodContext.put(Script.CONTEXT_APP_PROVIDER, appProvider);
+                    script.execute(methodContext);
 
-                        script.execute(methodContext);
+                    List<JournalEntry> createdEntries = (List<JournalEntry>) methodContext.get(Script.RESULT_VALUE);
+                    log.info("Process {} JournalEntry for AO={}, OCC={}, ASCH={}",
+                            createdEntries.size(), accountOperation.getId(), occT.getId(), occT.getAccountingScheme().getCode());
+                    if (!createdEntries.isEmpty()) {
+                        accountOperation.setStatus(AccountOperationStatus.EXPORTED);
+                    } else {
+                        accountOperation.setStatus(AccountOperationStatus.EXPORT_FAILED);
+                    }
 
-                        List<JournalEntry> createdEntries = (List<JournalEntry>) methodContext.get(Script.RESULT_VALUE);
-                        log.info("Process {} JournalEntry for AO={}, OCC={}, ASCH={}",
-                                createdEntries.size(), accountOperation.getId(), occT.getId(), occT.getAccountingScheme().getCode());
-                        if (!createdEntries.isEmpty()) {
-                            accountOperation.setStatus(AccountOperationStatus.EXPORTED);
-                        } else {
-                            accountOperation.setStatus(AccountOperationStatus.EXPORT_FAILED);
-                        }
+                    accountOperationService.update(accountOperation);
 
-                        accountOperationService.update(accountOperation);
-
-                    });
-        } finally {
-            jobExecutionResult.setNbItemsProcessedWithError(
-                    jobExecutionResult.getErrors() == null ? 0 : jobExecutionResult.getErrors().size());
-        }
+                });
 
     }
 
     private void markAsError(String error, JobExecutionResultImpl jobExecutionResult) {
-        jobExecutionResult.addErrorReport(error);
+        jobExecutionResult.registerError(error);
         throw new BusinessException(error);
+    }
+
+    private ScriptInterface findScript(AccountOperation ao, AccountingScheme as, JobExecutionResultImpl jobExecutionResult) {
+        try {
+            return scriptInstanceService.getScriptInstance(as.getScriptInstance().getCode());
+        } catch (BusinessException e) {
+            log.error("Error during loading script by code={} | {}", as.getScriptInstance().getCode(), e.getMessage(), e);
+            accountOperationService.updateStatusInNewTransaction(List.of(ao), AccountOperationStatus.EXPORT_FAILED);
+            jobExecutionResult.registerError("Account operation (id=" + ao.getId() + ", type=" + ao.getType() + ")" +
+                    " couldn't be processed by accounting scheme (code=" + as.getScriptInstance().getCode() + "): " + e.getMessage());
+            throw new BusinessException(e);
+        }
+
     }
 
 }
